Fix logo z-index

--- a/components/ui/Modal/Modal.module.scss
+++ b/components/ui/Modal/Modal.module.scss
@@ -24,6 +24,7 @@
   position: relative;
   max-width: var(--page-width);
   width: 100%;
+  height: 100%;
   max-height: 80vh;
   overflow-y: auto;
 }
